enigma_project/tests/error/posnotcharerr.inp
* B BETA III IV I &XLE